<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/ten_dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/twenty_dp"
        tools:context=".activities.MainActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/fifteen_dp"
            android:drawableTop="@mipmap/ic_launcher"
            android:drawablePadding="@dimen/seven_dp"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/twenty_two_sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/txtObjectDetection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_five_dp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/detect_objects"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/txtTextRecognition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/text_recognition"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/txtFaceRecognition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/face_recognition"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/txtViewSavedData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/view_saved_data"
            android:textColor="@color/white" />

    </LinearLayout>

</layout>
